--- a/Jogo.html
+++ b/Jogo.html
@@ -49,10 +49,10 @@
 
 <script>
 const paresCorretos = [
-  {conceito: "Etanol", impacto: "Reduz emissões"},
-  {conceito: "Esterificação", impacto: "Diminui biodiversidade"},
-  {conceito: "Polymerização", impacto: "Resistência ao biodegradável"},
-  {conceito: "Fertilizantes", impacto: "Contamina água"},
+  {conceito: "Biocombustíveis", impacto: "Inovação"},
+  {conceito: "Menos Poluição", impacto: "Melhora do clima"},
+  {conceito: "Sustentável", impacto: "Responsabilidade com meio ambiente"},
+  {conceito: "Tecnologia", impacto: "Novos conhecimentos"},
 ];
 
 const cartasOriginal = paresCorretos.flatMap(p => [
